tests/syntax_error/bin.jou
def foo() -> int:
    a = 0b110010
    b = 0b001101
    c = 0b0
    d = 0b1
    e = 0b  # Error: invalid binary number
